--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,4 @@ rvm:
   - 1.9
   - 2.0
   - 2.1
-script: bundle exec rubocop
-script: bundle exec rspec spec
+script: bundle exec rubocop && bundle exec rspec spec
