disable ParameterLists because we need all the elements for validation

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,3 +16,7 @@ WordArray:
 # Ignore this for now
 MethodLength:
   Max: 125
+
+# validation requires other objects
+ParameterLists:
+  Enabled: false
