--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -20,3 +20,7 @@ MethodLength:
 # validation requires other objects
 ParameterLists:
   Enabled: false
+
+# this needs to be cleaned up in lib/spiceweasel/nodes.rb
+BlockNesting:
+  Enabled: false
